--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>AAA Ecommerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
@@ -12,6 +12,8 @@
 <body>
     <!--Header Start -->
     <header>
+
+        <!--Navigation Start -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container">
                 <a class="navbar-brand" href="#"> <img src="images/logo.png" alt="Logo"></a>
@@ -39,7 +41,108 @@
                 </div>
             </div>
         </nav>
+        <!--Hero banner Start -->
+        <section class="container border rounded bg-info p-5 mt-5">
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="row d-flex justify-content-center align-items-center">
+                            <div class="col-md-7">
+                                <h1>Cool Dude Headphone</h1>
+                                <p>This is the best headphone in the world for people who just want to waste time in
+                                    front of funky world.</p>
+                                <h1>$420</h1>
+                                <button class="btn btn-warning px-5 py-3">Buy Now</button>
+                            </div>
+                            <div class="col-md-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100 img-fluid" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item">
+                        <div class="row d-flex justify-content-center align-items-center">
+                            <div class="col-md-7">
+                                <h1>Cool Dude Headphone</h1>
+                                <p>This is the best headphone in the world for people who just want to waste time in
+                                    front of funky world.</p>
+                                <h1>$420</h1>
+                                <button class="btn btn-warning px-5 py-3">Buy Now</button>
+                            </div>
+                            <div class="col-md-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100 img-fluid" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="carousel-item ">
+                        <div class="row d-flex justify-content-center align-items-center">
+                            <div class="col-md-7">
+                                <h1>Cool Dude Headphone</h1>
+                                <p>This is the best headphone in the world for people who just want to waste time in
+                                    front of funky world.</p>
+                                <h1>$420</h1>
+                                <button class="btn btn-warning px-5 py-3">Buy Now</button>
+                            </div>
+                            <div class="col-md-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100 img-fluid" alt="...">
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
     </header>
+    <div class="container mt-5">
+
+        <div class="row ">
+            <div class="col-md-4 d-flex flex-row align-items-center card border rounded bg-warning px-5 py-3">
+                <div class="col-6">
+                    <h1 class="text-white">Watch</h1>
+                </div>
+                <div class="col-6">
+                    <img class="img-fluid" src="images/categories/watch.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4 d-flex flex-row align-items-center card border rounded bg-success px-5 py-3">
+                <div class="col-6">
+                    <h1 class="text-white">Bag</h1>
+                </div>
+                <div class="col-6">
+                    <img class="img-fluid" src="images/categories/bag.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4 d-flex flex-row align-items-center card border rounded bg-primary px-5 py-3">
+                <div class="col-6">
+                    <h1 class="text-white">Shoes</h1>
+                </div>
+                <div class="col-6">
+                    <img class="img-fluid" src="images/categories/shoes.png" alt="">
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
+
+
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
