Products and Footer Added

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
             </div>
         </section>
     </header>
+    <!--Ctaegories Start -->
     <div class="container mt-5">
-
         <div class="row ">
             <div class="col-md-4 d-flex flex-row align-items-center card border rounded bg-warning px-5 py-3">
                 <div class="col-6">
@@ -136,8 +136,95 @@
 
     </div>
 
+    <!-- Products Start -->
+    <div class="container">
+        <h1 class="text-left">Shoes</h1>
+        <div class="card-group">
+            <div class="card me-2 shadow p-3 mb-5 bg-body-tertiary rounded">
+                <img src="images/shoes/shoe-1.png" class="card-img-top img-fluid" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Supply 350</h5>
+                    <h2>$160</h2>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This
+                        content is a little bit longer.</p>
+                    <button class="btn btn-warning px-5 py-3">Buy Now</button>
+                </div>
+            </div>
+            <div class="card me-2 shadow p-3 mb-5 bg-body-tertiary rounded">
+                <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Nike 360</h5>
+                    <h2>$110</h2>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This
+                        content is a little bit longer.</p>
+                    <button class="btn btn-warning px-5 py-3">Buy Now</button>
+                </div>
+            </div>
+            <div class="card me-2 shadow p-3 mb-5 bg-body-tertiary rounded">
+                <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Red Airmax</h5>
+                    <h2>$160</h2>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This
+                        content is a little bit longer.</p>
+                    <button class="btn btn-warning px-5 py-3">Buy Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
+    <div class="container">
+        <h1 class="text-left">Backpack</h1>
+        <div class="card-group">
+            <div class="card me-2 shadow p-3 mb-5 bg-body-tertiary rounded">
+                <img src="images/bags/bag-1.png" class="card-img-top img-fluid" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Red Laltu Bag</h5>
+                    <h2>$210</h2>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This
+                        content is a little bit longer.</p>
+                    <button class="btn btn-warning px-5 py-3">Buy Now</button>
+                </div>
+            </div>
+            <div class="card me-2 shadow p-3 mb-5 bg-body-tertiary rounded">
+                <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Nike 360</h5>
+                    <h2>$125</h2>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This
+                        content is a little bit longer.</p>
+                    <button class="btn btn-warning px-5 py-3">Buy Now</button>
+                </div>
+            </div>
+            <div class="card me-2 shadow p-3 mb-5 bg-body-tertiary rounded">
+                <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Red Airmax</h5>
+                    <h2>$160</h2>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This
+                        content is a little bit longer.</p>
+                    <button class="btn btn-warning px-5 py-3">Buy Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="container mt-5">
+        <form class="d-flex flex-column justify-content-center align-items-center  p-5 bg-info border rounded"
+            role="search">
+            <h1>LET'S STAY IN TOUCH</h1>
+            <h3>Get updates on sales, specials and more</h3>
+            <input class="form-control w-50" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-warning m-2" type="submit">Submit</button>
+        </form>
+    </div>
 
 
 
